# season-ticket-draft

./: Cargo.toml
resources/: README.md  games.json  unprocessed.json
src/: calendar.rs  drafter.rs  games.rs  lib.rs  main.rs  schedule.rs  web.rs
www/: index.html  index.js  package-lock.json  package.json
