[package]
name = "season-ticket-draft"
version = "0.1.0"
edition = "2018"
authors = ["Rory Jacob <roryjacob@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
anyhow = "1.0"

